# python_articles

./: .copier-answers.yml  README.md  _quarto.yml  justfile  pyproject.toml  requirements.txt
_freeze/docs/data_product/execute-results/: html.json
_freeze/docs/tidy_pandas/execute-results/: html.json
docs/: data_product.qmd  ibis.qmd  tidy_pandas.qmd
