[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "python_articles"
version = "0.1.0"
description = "Repository for publishing useful articles on python and data science"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.10",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "quartodoc>=0.9.1",
    "toml>=0.10.2",
    "typer>=0.15.2",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]

[[project.authors]]
name = "Actuarist AI"
email = ""

[tool.ruff]
src = [ "python_articles", "tests",]
line-length = 120
exclude = [ ".git", ".ruff_cache", ".venv", "__pypackages__", "__init__.py",]

[tool.autopep8]
max_line_length = 120

[tool.ruff.lint]
select = [ "ALL",]
ignore = [ ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.hatch.build.targets.wheel]
packages = ["src/python_articles", "conf"]

